Improve microphone input
Improve microphone and audio upload
